J'ai réglé des problèmes qui sortent de je sais pas où