@@ -1,6 +1,7 @@
 package com.univtours.polytech.Controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -9,9 +10,13 @@ import org.springframework.http.ResponseEntity;
 
 import com.univtours.polytech.dto.TerrainDTO;
 import com.univtours.polytech.entity.Terrain;
+import com.univtours.polytech.entity.Coordonnees;
 import com.univtours.polytech.mapper.TerrainMapper;
 import com.univtours.polytech.services.TerrainService;
+import com.univtours.polytech.repository.CoordonneesRepository;
 import org.springframework.web.bind.annotation.*;
+
+import jakarta.persistence.EntityNotFoundException;
 
 
 @RestController
@@ -24,10 +29,23 @@ public class TerrainController {
     @Autowired
     private TerrainMapper terrainMapper;
 
+    @Autowired
+    private CoordonneesRepository coordonneesRepository;
+
     // CREATE
     @PostMapping
     public ResponseEntity<TerrainDTO> createTerrain(@RequestBody TerrainDTO dto) {
         Terrain entity = terrainMapper.toEntity(dto);
+        
+        // Charger les coordonnées à partir de l'ID fourni dans le DTO
+        if (dto.getCoordonneesId() != null) {
+            Coordonnees coordonnees = coordonneesRepository.findById(dto.getCoordonneesId())
+                .orElseThrow(() -> new EntityNotFoundException("Coordonnees with id " + dto.getCoordonneesId() + " not found"));
+            entity.setCoordonnees(coordonnees);
+        } else {
+            throw new EntityNotFoundException("coordonneesId is required");
+        }
+        
         terrainService.createTerrain(entity);
         TerrainDTO response = terrainMapper.toDTO(entity);
         return new ResponseEntity<>(response, HttpStatus.CREATED);
@@ -45,7 +63,7 @@ public class TerrainController {
     @GetMapping
     public ResponseEntity<List<TerrainDTO>> getAllTerrains() {
         List<Terrain> entities = terrainService.readAllTerrains();
-        List<TerrainDTO> dtos = entities.stream().map(terrainMapper::toDTO).toList();
+        List<TerrainDTO> dtos = entities.stream().map(terrainMapper::toDTO).collect(Collectors.toList());
 
         return ResponseEntity.ok(dtos);
     }
@@ -57,12 +75,20 @@ public class TerrainController {
             @RequestBody TerrainDTO dto
     ) {
         Terrain entity = terrainMapper.toEntity(dto);
+        
+        // Charger les coordonnées si fourni
+        Coordonnees coordonnees = null;
+        if (dto.getCoordonneesId() != null) {
+            coordonnees = coordonneesRepository.findById(dto.getCoordonneesId())
+                .orElseThrow(() -> new EntityNotFoundException("Coordonnees with id " + dto.getCoordonneesId() + " not found"));
+        }
+        
         terrainService.updateTerrain(
                 id,
                 entity.getNom(),
                 entity.getQuantite(),
                 entity.getDescription(),
-                entity.getCoordonneesId()
+                coordonnees
         );
         return ResponseEntity.noContent().build();
     }
